--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
   },
   "dependencies": {
     "axios": "^1.6.8",
+    "html5-qrcode": "^2.3.8",
+    "i": "^0.3.7",
     "normalize.css": "^8.0.1",
     "nprogress": "^0.2.0",
     "pinia": "^2.1.7",
@@ -64,6 +66,7 @@
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.38",
     "prettier": "^3.2.5",
+    "sass-embedded": "^1.77.8",
     "standard-version": "^9.5.0",
     "tailwindcss": "^3.4.3",
     "typescript": "~5.4.5",
