--- a/package.json
+++ b/package.json
@@ -30,12 +30,14 @@
     "axios": "^1.6.8",
     "html5-qrcode": "^2.3.8",
     "i": "^0.3.7",
+    "jsqr": "^1.4.0",
     "normalize.css": "^8.0.1",
     "nprogress": "^0.2.0",
     "pinia": "^2.1.7",
     "vant": "^4.9.0",
     "vue": "^3.4.27",
-    "vue-router": "^4.3.2"
+    "vue-router": "^4.3.2",
+    "webrtc-adapter": "^9.0.1"
   },
   "devDependencies": {
     "@commitlint/config-conventional": "^19.2.2",
