--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "vite-plugin-cdn2": "^1.1.0",
     "vite-plugin-compression": "^0.5.1",
     "vite-plugin-html": "^3.2.2",
+    "vite-plugin-https": "^1.0.2",
     "vite-plugin-mock-dev-server": "^1.5.0",
     "vite-plugin-svg-icons": "^2.0.1",
     "vite-plugin-vue-setup-extend": "^0.4.0",
