--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "html5-qrcode": "^2.3.8",
     "i": "^0.3.7",
     "jsqr": "^1.4.0",
+    "moment": "^2.30.1",
     "normalize.css": "^8.0.1",
     "nprogress": "^0.2.0",
     "pinia": "^2.1.7",
